# heterarchical-element-model

./: README.md  main.py  pyproject.toml  test.json5
heterarchical-element-model/: main.py
json5/: test.json5
